2022-11-25T08:18:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3546369406 # 645
* notice: last 14d: unq all: 2 27
* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 263 479
* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 264 480
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-25]

2022-11-25T01:12:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3544582413 # 644
* notice: last 14d: unq all: 2 26
* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 263 478
* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 263 479
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-11-24]

2022-11-24T16:19:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3542241095 # 643
* notice: last 14d: unq all: 2 25
* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 263 477
* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 263 478
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-24]

2022-11-24T08:18:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3538850610 # 642
* notice: last 14d: unq all: 2 24
* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 262 476
* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 263 477
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-24]

2022-11-23T16:19:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3533823313 # 640