@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-25T08:18:30Z",
+  "timestamp" : "2022-11-26T01:08:57Z",
   "count_outdated" : 453,
   "uniques_outdated" : 250,
-  "count" : 480,
+  "count" : 481,
   "uniques" : 264,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-11-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
