@@ -1,5 +1,5 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 2,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2022-11-25T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
