@@ -1,3 +1,11 @@
+2022-11-26T01:08:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3551584366 # 647
+* notice: last 14d: unq all: 2 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 264 480
+* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 264 481
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-25]
+
 2022-11-25T08:18:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3546369406 # 645
 * notice: last 14d: unq all: 2 27
